force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Auto_Capture_Only_Transactions_Due_Today__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Auto_Capture_Only_Transactions_Due_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Capture Only Transactions Due Today</label>
    <type>Checkbox</type>
</CustomField>