force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Balance_Validation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Balance_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked,Before a transfer or payout is processed the balances will not be checked against the stripe/salesforce data</inlineHelpText>
    <label>Disable Transaction Balance Validation</label>
    <type>Checkbox</type>
</CustomField>