force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Charge_Receipt_Default__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Charge_Receipt_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Send receipt checkbox on transaction will not be checked by default.</description>
    <inlineHelpText>If checked, Send receipt checkbox on transaction will not be checked by default.</inlineHelpText>
    <label>Disable Charge Receipt Default</label>
    <type>Checkbox</type>
</CustomField>