force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Lead_Convert_Record_Update__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Lead_Convert_Record_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable the Lead trigger that sets the Account and Contact lookup on Payment Gateway Customers, Payment Methods and Transactions for converted Leads.</description>
    <inlineHelpText>Check this box to disable the Lead trigger that sets the Account and Contact lookup on Payment Gateway Customers, Payment Methods and Transactions for converted Leads</inlineHelpText>
    <label>Disable Lead Convert Record Update</label>
    <type>Checkbox</type>
</CustomField>