force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_LineItem_AutoSync_With_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_LineItem_AutoSync_With_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, line items will not be automatically pushed to stripe invoice. You will need to push it manually using Push To Stripe.</description>
    <inlineHelpText>If checked, line items will not be automatically pushed to stripe invoice. You will need to push it manually using Push To Stripe.</inlineHelpText>
    <label>Disable Line Item Auto Sync With Stripe</label>
    <type>Checkbox</type>
</CustomField>