force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Opp_Generate_Subscription__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Opp_Generate_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opp Generate Subscription</label>
    <type>Checkbox</type>
</CustomField>