force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PaymentMethod_Delete__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PaymentMethod_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the PaymentMethod Delete trigger.</inlineHelpText>
    <label>Disable PaymentMethod Delete</label>
    <type>Checkbox</type>
</CustomField>