force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PaymentMethod_RUPContactToCust__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PaymentMethod_RUPContactToCust__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Account and Contact on Payment Method will not roll-up to the Stripe Customer record.</description>
    <inlineHelpText>If checked, the Account and Contact on Payment Method will not roll-up to the Stripe Customer record.</inlineHelpText>
    <label>Disable PM Roll-up To Stripe Customer</label>
    <type>Checkbox</type>
</CustomField>