force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PaymentMethod_SetDefaultGateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PaymentMethod_SetDefaultGateway__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the PaymentMethod SetDefaultGateway trigger.</inlineHelpText>
    <label>Disable PaymentMethod SetDefaultGateway</label>
    <type>Checkbox</type>
</CustomField>