force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PaymentMethod_Validate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PaymentMethod_Validate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the validation rules for ACH fields, card fields and &quot;Remove from Stripe&quot; button logic will be disabled.</description>
    <inlineHelpText>If checked, the validation rules for ACH fields, card fields and &quot;Remove from Stripe&quot; button logic will be disabled.</inlineHelpText>
    <label>Disable PM ACH and Card Validation</label>
    <type>Checkbox</type>
</CustomField>