force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PaymentMethod_ValidateOnInsert__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PaymentMethod_ValidateOnInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables On Insert validation of PM fields like ACH required field validations</inlineHelpText>
    <label>Disable_PaymentMethod_ValidateOnInsert</label>
    <type>Checkbox</type>
</CustomField>