force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Plan_PushToStripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Plan_PushToStripe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Plan_PushToStripe</label>
    <type>Checkbox</type>
</CustomField>