force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PSchedule_Generate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PSchedule_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Trans Created On Payment Sched</label>
    <type>Checkbox</type>
</CustomField>