force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PSchedule_UpdatePM__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PSchedule_UpdatePM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable PSchedule_UpdatePM</label>
    <type>Checkbox</type>
</CustomField>