force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_RolldownParentToTra__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_RolldownParentToTra__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Account and Contact on Payment Schedule will not roll-down to related Transactions.</inlineHelpText>
    <label>Disable Payment Sched Roll-down to Trans</label>
    <type>Checkbox</type>
</CustomField>