force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_SalesDocument_StripeValidation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_SalesDocument_StripeValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked,before data is pushed to stripe the validation do not fire.</inlineHelpText>
    <label>Disable Sales Document Stripe Validation</label>
    <type>Checkbox</type>
</CustomField>