force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_SD_SendStripeInvoiceBatch__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_SD_SendStripeInvoiceBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SD_SendStripeInvoiceBatch</label>
    <type>Checkbox</type>
</CustomField>