force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Send_Invoice_Immediately__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Send_Invoice_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, invoice is not sent immediately. Instead use Send Invoice button or schedule an invoice for auto send.</description>
    <inlineHelpText>If checked, invoice is not sent immediately. Instead use Send Invoice button or schedule an invoice for auto send.</inlineHelpText>
    <label>Disable Send Invoice Immediately</label>
    <type>Checkbox</type>
</CustomField>