force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_StripeCustomer_Delete__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_StripeCustomer_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the StripeCustomer Delete trigger.</inlineHelpText>
    <label>Disable StripeCustomer Delete</label>
    <type>Checkbox</type>
</CustomField>