force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_StripeCustomer_PreventDelete__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_StripeCustomer_PreventDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if checked, PreventDelete Apex Trigger is disabled and you can manually delete Stripe Customer records.</inlineHelpText>
    <label>Disable Delete Stripe Customer Records</label>
    <type>Checkbox</type>
</CustomField>