force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Subs_RollupRRToAccount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Subs_RollupRRToAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Subs_RollupRRToAccount</label>
    <type>Checkbox</type>
</CustomField>