force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_Charge__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the Transaction Charge trigger.</inlineHelpText>
    <label>Disable Transaction Charge</label>
    <type>Checkbox</type>
</CustomField>