force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_Related_Lookups__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_Related_Lookups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Account, Contact or Lead lookups will not be set on Transaction from the related payment method/sales document/connected account.</description>
    <inlineHelpText>If checked, the Account and Contact on Transaction will not be populated from payment method/sales document/connected account.</inlineHelpText>
    <label>Disable Transaction Related Lookups</label>
    <type>Checkbox</type>
</CustomField>