force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_RollupRefunds__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_RollupRefunds__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the &quot;Retained Revenue Amount&quot; field will not subtract any related refunded Transaction amounts.</inlineHelpText>
    <label>Disable Retained Revenue Amount Formula</label>
    <type>Checkbox</type>
</CustomField>