force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_ValidateRules__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_ValidateRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Transaction ValidateRules</label>
    <type>Checkbox</type>
</CustomField>