force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_TransferGroupIDValidation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_TransferGroupIDValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When disabled, Transaction: Process with Transfer Group can be TRUE without a value in Transfer Group ID.</description>
    <inlineHelpText>When disabled, Transaction: Process with Transfer Group can be TRUE without a value in Transfer Group ID.</inlineHelpText>
    <label>Disable Transfer Group ID Validation</label>
    <type>Checkbox</type>
</CustomField>