force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Update_PM_Related_Transaction__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Update_PM_Related_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Update PM Related Transactions</label>
    <type>Checkbox</type>
</CustomField>