force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_Stripe_Radar__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Stripe_Radar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Stripe Radar</label>
    <type>Checkbox</type>
</CustomField>