force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__EndpointConfigured__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__EndpointConfigured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this check whether the all endpoint are configured for not</description>
    <label>Endpoint Configured</label>
    <type>Checkbox</type>
</CustomField>