force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Match_On_Email_And_First_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Match_On_Email_And_First_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Contacts will match with Payment Methods and Payment Gateway Customers based on their first name and email. If this field is not checked, Contacts will just match based on their email.</description>
    <inlineHelpText>When checked, Contacts will match with Payment Methods and Payment Gateway Customers based on their first name and email. If this field is not checked, Contacts will just match based on their email.</inlineHelpText>
    <label>Match on email and first name</label>
    <type>Checkbox</type>
</CustomField>