force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Personal_ID_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Personal_ID_Number_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the encrypted value in Personal ID Number will not be removed when a Connected Account is verified.</description>
    <inlineHelpText>When checked, the encrypted value in Personal ID Number will not be removed when a Connected Account is verified.</inlineHelpText>
    <label>Personal ID Number Encrypted</label>
    <type>Checkbox</type>
</CustomField>