force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Retain_Webhook_Records_for_Days__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retain_Webhook_Records_for_Days__c</fullName>
    <inlineHelpText>Default logic deletes Webhook records at the end of every day. Entering in a Number of Day&apos;s postpones the Webhook deletion job.</inlineHelpText>
    <label>Retain Webhook Records for (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>