force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Send_Notification_On_Failed_Transaction__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Send_Notification_On_Failed_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this to send the customizable payment360 Notification on failed transactions. You need to define the template ID for this to work.</inlineHelpText>
    <label>Send Notification On Failed Transaction</label>
    <type>Checkbox</type>
</CustomField>