force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Send_Receipt_On_Refund__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Send_Receipt_On_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this to send the customizable payment360 Receipt on every refund transaction. You need to define the template ID for this to work.</inlineHelpText>
    <label>Send Receipt On Refund Transactions</label>
    <type>Checkbox</type>
</CustomField>