force-app/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Terminal_Disable_New_Charge__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Terminal_Disable_New_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Disable New Charge</label>
    <type>Checkbox</type>
</CustomField>